--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     position: relative;
     background-image: url(images/background.jpg);
     background-size: cover;
+    margin: 0;
 }
 @font-face {
     font-family: 'finalfantasy';
@@ -38,12 +39,18 @@ body {
     transform-style: preserve-3d;
 }
 
+.card:hover {
+    box-shadow: 0 2px 10px 5px #ffffff;
+}
+
 .front{
     height: 100%;
     width: 100%;
     position: absolute;
     left: 0;
     top: 0;
+    border: 3px solid black;
+    border-radius: 5px;
     backface-visibility: hidden;
     transform: rotateY(180deg);
     background-size: cover;
@@ -54,6 +61,8 @@ body {
     height: 100%;
     width: 100%;
     position: absolute;
+    border: 3px solid black;
+    border-radius: 5px;
     left: 0;
     top: 0;
     backface-visibility: hidden;
@@ -68,7 +77,7 @@ body {
 }
 
 .stats {
-    background-color: rgba(255,255,255,0.4);
+    background-color: rgba(0,0,0,0.5);
     height: 20%;
     color: white;
     position: relative;
@@ -162,6 +171,19 @@ body {
     top:15%;
     width:19%;
     height:12%;
+}
+
+.pauseAudioButton{
+    font-family: 'finalfantasy';
+    position: absolute;
+    background-color: transparent;
+    border: none;
+    font-size: 16px;
+    color: white;
+    bottom: 33%;
+    right: 15%;
+    height:6%;
+    width: 40%;
 }
 
 .enemyStats{
