--- a/style.css
+++ b/style.css
@@ -43,33 +43,23 @@ body {
     box-shadow: 0 2px 10px 5px #ffffff;
 }
 
-.front{
+.front, .back {
     height: 100%;
     width: 100%;
     position: absolute;
-    left: 0;
-    top: 0;
     border: 3px solid black;
     border-radius: 5px;
     backface-visibility: hidden;
-    transform: rotateY(180deg);
     background-size: cover;
     background-position: center;
 }
 
+.front{
+    transform: rotateY(180deg);
+}
+
 .back{
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    border: 3px solid black;
-    border-radius: 5px;
-    left: 0;
-    top: 0;
-    backface-visibility: hidden;
     background-image: url(images/finalfantasycardlogo.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
 }
 
 .flipped{
@@ -83,28 +73,21 @@ body {
     position: relative;
 }
 
+.blackMageIdle, .blackMageFire {
+    position: absolute;
+    height: 80%;
+    top: 10%;
+}
+
 .blackMageIdle {
-     position: absolute;
-     height: 80%;
-     top: 10%;
      left: 45%;
  }
 
 .blackMageFire {
-    position: absolute;
-    height: 80%;
-    top: 10%;
     left: 40%;
 }
 
-.enemyIdle {
-    position: absolute;
-    height: 90%;
-    top: 5%;
-    left: 25%;
-}
-
-.enemyCasting {
+.enemyIdle, .enemyCasting, .enemyDamaged {
     position: absolute;
     height: 90%;
     top: 5%;
@@ -112,9 +95,7 @@ body {
 }
 
 .enemyDamaged {
-    position: absolute;
     height: 95%;
-    left: 25%;
 }
 
 .info {
@@ -131,37 +112,27 @@ body {
     width:45%;
 }
 
-.matches {
+.matches, .attempts, .accuracy, .gamesPlayed {
     position: absolute;
-    left:5%;
-    height:20%;
-    top: 10%;
-    width:30%;
+    left: 5%;
+    height: 20%;
+    width: 30%;
+}
 
+.matches {
+    top: 10%;
 }
 
 .attempts {
-    position: absolute;
-    left: 5%;
-    height:20%;
     top: 25%;
-    width:30%;
 }
 
 .accuracy {
-    position: absolute;
-    left: 5%;
-    height:20%;
     top: 40%;
-    width:30%;
 }
 
 .gamesPlayed {
-    position: absolute;
-    left: 5%;
-    height:20%;
     top: 55%;
-    width:30%;
 }
 
 .hp {
@@ -171,19 +142,6 @@ body {
     top:15%;
     width:19%;
     height:12%;
-}
-
-.pauseAudioButton{
-    font-family: 'finalfantasy';
-    position: absolute;
-    background-color: transparent;
-    border: none;
-    font-size: 16px;
-    color: white;
-    bottom: 33%;
-    right: 15%;
-    height:6%;
-    width: 40%;
 }
 
 .enemyStats{
@@ -219,19 +177,6 @@ body {
     text-align: center;
 }
 
-.startButton{
-    position: absolute;
-    background-color: transparent;
-    border: none;
-    font-family: 'finalfantasy';
-    font-size: 16px;
-    color: black;
-    height: 6%;
-    width: 10%;
-    left: 42%;
-    top: 73%;
-}
-
 .gameOver {
     position: absolute;
     width: 100%;
@@ -239,6 +184,7 @@ body {
     top: 0;
     left: 0;
     background-image: url(images/gameOver.jpg);
+    background-color: white;
     background-size: cover;
     background-position: center;
     color: white;
@@ -252,24 +198,76 @@ body {
     top: 0;
 }
 
-.victoryNewGame{
+.continue, .newGame, .victoryNewGame,.startButton,.pauseAudioButton, .aboutButton {
     font-family: 'finalfantasy';
+    position: absolute;
+    background-color: transparent;
+    border: none;
+}
+
+.startButton, .aboutButton{
+    font-size: 16px;
+    color: black;
+    height: 6%;
+    width: 10%;
+    left: 42%;
+}
+
+.startButton {
+    top: 73%;
+}
+
+.aboutButton {
+    top: 80%;
+}
+
+.aboutPage {
+    border: 3px solid black;
+    font-family: 'finalfantasy';
+    background-color: white;
+    position: absolute;
+    font-size: 1vw;
+    height: 40%;
+    width: 25%;
+    left: 35%;
+    top: 30%;
+}
+
+.xButton {
+    position: absolute;
+    font-family: 'finalfantasy';
+    font-size: 1vw;
+    height: 10%;
+    width: 10%;
+    top: 0;
+    right: 0;
+    border: none;
+    background: transparent;
+}
+
+.aboutDetails {
+    position:relative;
+}
+
+.pauseAudioButton{
+    font-size: 16px;
+    color: white;
+    bottom: 33%;
+    right: 15%;
+    height:6%;
+    width: 40%;
+}
+
+.victoryNewGame{
     font-size: 18px;
     color: white;
-    border:none;
-    background-color: transparent;
-    position: absolute;
     text-align: center;
     bottom: 8%;
     left: 50%;
 }
 
 .newGame{
-    position: absolute;
-    font-family: 'finalfantasy';
     font-size: 16px;
-    border: none;
-    background-color: transparent;
     color: white;
     height: 7%;
     width: 15%;
@@ -278,11 +276,7 @@ body {
 }
 
 .continue {
-    position: absolute;
-    font-family: 'finalfantasy';
     font-size: 16px;
-    border: none;
-    background-color: transparent;
     color: white;
     height: 7%;
     width: 15%;
