--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body {
 .info {
     background-image: url(images/hpBar.png);
     font-family: 'finalfantasy';
-    font-size: 12px;
+    font-size: 0.5rem;
     background-size: contain;
     background-repeat: no-repeat;
     position: absolute;
@@ -136,7 +136,7 @@ body {
 
 .hp {
     position: absolute;
-    font-size: 14px;
+    font-size: 0.75rem;
     left: 45.5%;
     top:15%;
     width:19%;
@@ -146,7 +146,7 @@ body {
 .enemyStats{
     position: absolute;
     font-family: 'finalfantasy';
-    font-size: 14px;
+    font-size: 0.75rem;
     background-image: url(images/enemyHp.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -205,7 +205,7 @@ body {
 }
 
 .startButton, .aboutButton{
-    font-size: 16px;
+    font-size: 0.75rem;
     color: black;
     height: 6%;
     width: 10%;
@@ -225,7 +225,7 @@ body {
     font-family: 'finalfantasy';
     background-color: white;
     position: absolute;
-    font-size: 1vw;
+    font-size: 0.9vw;
     height: 40%;
     width: 25%;
     left: 35%;
@@ -249,7 +249,7 @@ body {
 }
 
 .pauseAudioButton{
-    font-size: 16px;
+    font-size: 0.7rem;
     color: white;
     bottom: 33%;
     right: 15%;
@@ -258,7 +258,7 @@ body {
 }
 
 .victoryNewGame{
-    font-size: 18px;
+    font-size: 0.8rem;
     color: white;
     text-align: center;
     bottom: 8%;
@@ -266,7 +266,7 @@ body {
 }
 
 .newGame{
-    font-size: 16px;
+    font-size: 0.8rem;
     color: white;
     height: 7%;
     width: 15%;
@@ -275,7 +275,7 @@ body {
 }
 
 .continue {
-    font-size: 16px;
+    font-size: 0.8rem;
     color: white;
     height: 7%;
     width: 15%;
