--- a/style.css
+++ b/style.css
@@ -72,6 +72,10 @@ body {
     position: relative;
 }
 
+.portraitStats, .portraitStatsHide {
+    visibility: hidden;
+}
+
 .blackMageIdle, .blackMageFire {
     position: absolute;
     height: 80%;
@@ -364,3 +368,53 @@ body {
         font-size: 0.75rem;
     }
 }  
+
+@media only screen and (-webkit-min-device-pixel-ratio:3) and (max-width: 823px) and (min-width: 374px) and (orientation:portrait) {
+    .gameStart {
+        background-size: 175%;
+        background-color: white;
+        background-repeat: no-repeat;
+    }
+    .enemy img, .blackMageIdle, .blackMageFire {
+        height: 30%;
+    }
+    .enemy img {
+        top: 12%;
+    }
+    .enemyNamePlate, .playerNamePlate, .enemyHp, .playerHp {
+        font-size: 0.5rem;
+    }
+    #enemyHealth {
+        top: 2%;
+        height: 4%;
+        left: 20%;
+        width: 65%;
+    }
+    #playerHealth {
+        top: 2%;
+        height: 4%;
+        left: 55%;
+        width: 35%;
+    }
+    .info {
+        font-size: 0.5rem;
+    }
+    .infoTitle {
+        top: 7%;
+    }
+    .portraitStats {
+        visibility: visible;
+        position: absolute;
+        top: 12%;
+        left: 5%;
+        font-size: 0.4rem;
+    }
+    .portraitStatsHide {
+        position: absolute;
+        top: 85%;
+        left: 5%;
+    }
+    .matches, .attempts, .accuracy, .gamesPlayed, .portraitStatsHide {
+        visibility: hidden;
+    }
+}
